--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ li a:hover{
     height:250px;
     margin-left: 900px;
     border-radius:2%;
-    
+
 }
 #space{
     text-align:left;
@@ -88,36 +88,43 @@ li a:hover{
 .moon{
     border:2px solid lightgrey;
     width:300px;
-    
+
     height:20px;
     margin-top:15px;
     margin:10px;
-    
+
     padding-right:7px;
     padding:10px;
     padding-top:13px;
-   
+
     border-radius:3%;
 }
 .login{
     border:2px solid #2c3e50;
     color:white;
     background:#2c3e50;
-    
+
     text-align:center;
     font-size:20px;
-    
+
     width:300px;
     height:30px;
-    
+
     margin:10px;
     margin-top:15px;
-    
+
     padding-right:7px;
     padding:10px;
     padding-top:13px;
-    
+
     border-radius:3%;
 }
 
+.img{
+    position:absolute; top:125px; right: 1000px;
+    border: 3px solid black;
+}
 
+.login:hover{
+    background:black;
+}
